--- a/src/Component/Header/index.module.css
+++ b/src/Component/Header/index.module.css
@@ -5,11 +5,27 @@
     background-color: black;
     padding: 20px;
     align-items: center;
-    gap: 20px;
+    /* gap: 20px; */
+    box-sizing: border-box;
 margin: 0;
+}
+.container{
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 .navBar a{
     text-decoration: none;
     padding: 5px 10px;
     border-radius: 10px;
+}
+.container > button{
+    position: absolute;
+    right: 40px;
+    top:10px;
+        background-color: rgb(57, 167, 130);
+        border: none;
+        color: white;
+        padding: 10px 20px ;
+        border-radius: 5px;
 }
